加入Parser对null的支持